Route security admin authentication working

--- a/LessonLockerREST/src/main/resources/application.properties
+++ b/LessonLockerREST/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.serialization.write-dates-as-timestamps=false
 
-spring.jmx.default-domain=TodoREST
+spring.jmx.default-domain=LessonLockerREST
+
+logging.level.org.springframework.security=FATAL
