Model update and new SQL

--- a/LessonLockerREST/src/main/resources/application.properties
+++ b/LessonLockerREST/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 
 spring.jmx.default-domain=LessonLockerREST
 
-logging.level.org.springframework.security=FATAL
+logging.level.org.springframework.security=DEBUG
